Cambiamos el nombre del dominio por que había caducado en HTTPS

--- a/Docker_HTTPS/docker-compose.yml
+++ b/Docker_HTTPS/docker-compose.yml
@@ -47,7 +47,7 @@ services:
       - 443:443
     restart: always
     environment:
-      DOMAINS: 'dominio-iawjoaquin.ddns.net -> http://wordpress:8080'
+      DOMAINS: 'dominiodejoaquin.ddns.net-> http://wordpress:8080'
       STAGE: 'production' # Don't use production until staging works
     # FORCE_RENEW: 'true'
 
