--- a/Dockers/.env
+++ b/Dockers/.env
@@ -1,8 +1,34 @@
-# WordPress environment variables
-WORDPRESS_DB_NAME=wp_database
-WORDPRESS_DB_USER=wp_user
-WORDPRESS_DB_PASSWORD=wp_password
+# WordPress environment variables 
+
+#Estas variables sirven para poder reutilizarse para MYSQL
+
+WORDPRESS_DATABASE_NAME=wp_database
+WORDPRESS_DATABASE_USER=wp_user
+WORDPRESS_DATABASE_PASSWORD=wp_password
 WORDPRESS_DATABASE_PORT_NUMBER=3306
+
+#Variables de wordpress para el sitio
+WORDPRESS_BLOG_NAME=Sitio_de_Joaquin
+WORDPRESS_USERNAME=admin
+WORDPRESS_PASSWORD=admin
+WORDPRESS_EMAIL=demo@demo.es
+
 
 # MySQL Server environment variables
 MYSQL_ROOT_PASSWORD=root
+
+#Comandos para parar todos los contenedores.
+#$ docker stop $(docker ps -q)
+
+#Comadno para borrar todos los contenedores.
+#docker rm $(docker ps -a -q)
+
+#Comando para eliminar los volumenes de los docksers
+
+#docker compose down -v
+
+#Comando para poder eliminar todos los volumenes.
+
+#docker system prune --volumes
+
+# El comando prune unicamente borrado todo lo necesario como conetenedores, redes,etc...
