--- a/Docker_HTTPS/.env
+++ b/Docker_HTTPS/.env
@@ -1,8 +1,16 @@
-# WordPress environment variables
+# WordPress environment variables 
 WORDPRESS_DB_NAME=wp_database
 WORDPRESS_DB_USER=wp_user
 WORDPRESS_DB_PASSWORD=wp_password
 WORDPRESS_DATABASE_PORT_NUMBER=3306
+
+#Variables de wordpress para el sitio
+WORDPRESS_BLOG_NAME=Sitio de Joaquín
+WORDPRESS_PLUGINS=hidelogin,classic
+WORDPRESS_USERNAME=admin
+WORDPRESS_PASSWORD=admin
+WORDPRESS_EMAIL=demo@demo.es
+
 
 # MySQL Server environment variables
 MYSQL_ROOT_PASSWORD=root
