--- a/Docker_HTTPS/docker-compose.yml
+++ b/Docker_HTTPS/docker-compose.yml
@@ -12,6 +12,10 @@ services:
       - WORDPRESS_DATABASE_USER=${WORDPRESS_DB_USER}
       - WORDPRESS_DATABASE_PASSWORD=${WORDPRESS_DB_PASSWORD}
       - WORDPRESS_DATABASE_PORT_NUMBER=${WORDPRESS_DATABASE_PORT_NUMBER}
+      - WORDPRESS_PLUGINS=${WORDPRESS_PLUGINS}
+      - WORDPRESS_USERNAME=${WORDPRESS_USERNAME}
+      - WORDPRESS_PASSWORD=${WORDPRESS_PASSWORD}
+      - WORDPRESS_EMAIL=${WORDPRESS_EMAIL}
       - ALLOW_EMPTY_PASSWORD=yes
     volumes: 
       - wordpress_data:/var/www/html
@@ -22,7 +26,7 @@ services:
   mysql:
     image: mysql:8.0
     ports:
-      - "3306:3306"
+      - 3306:3306
     environment:
       - MYSQL_ROOT_PASSWORD=${MYSQL_ROOT_PASSWORD}
       - MYSQL_DATABASE=${WORDPRESS_DB_NAME}
