--- a/Dockers/.env
+++ b/Dockers/.env
@@ -17,6 +17,10 @@ WORDPRESS_EMAIL=demo@demo.es
 # MySQL Server environment variables
 MYSQL_ROOT_PASSWORD=root
 
+#Dominio
+
+DOMINIO=joaquiniaw-dominio.ddns.net
+
 #Comandos para parar todos los contenedores.
 #$ docker stop $(docker ps -q)
 
